[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.06, 0.08, 1)

[node name="Actors" type="Node2D" parent="."]

[node name="Player" parent="Actors" instance=ExtResource("2")]

[node name="Enemies" type="Node2D" parent="Actors"]

[node name="Bullets" type="Node2D" parent="Actors"]

[node name="Walls" type="Node2D" parent="Actors"]

[node name="Orbs" type="Node2D" parent="Actors"]

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = false
autostart = false

[node name="WallTimer" type="Timer" parent="."]
one_shot = false
autostart = false

[node name="OrbTimer" type="Timer" parent="."]
one_shot = false
autostart = false

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
volume_db = -6.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopBarBg" type="ColorRect" parent="HUD"]
offset_left = 12.0
offset_top = 12.0
offset_right = 520.0
offset_bottom = 150.0
color = Color(0.03, 0.04, 0.06, 0.6)

[node name="TitleLabel" type="Label" parent="HUD"]
offset_left = 26.0
offset_top = 20.0
offset_right = 26.0
offset_bottom = 20.0
text = "疾跑三关"
theme_override_font_sizes/font_size = 28

[node name="StageLabel" type="Label" parent="HUD"]
offset_left = 26.0
offset_top = 56.0
offset_right = 26.0
offset_bottom = 56.0
text = "关卡：第一关"
theme_override_font_sizes/font_size = 18

[node name="StatsLabel" type="Label" parent="HUD"]
offset_left = 26.0
offset_top = 82.0
offset_right = 26.0
offset_bottom = 82.0
text = "加载中..."
theme_override_font_sizes/font_size = 16

[node name="MessageBg" type="ColorRect" parent="HUD"]
offset_left = 360.0
offset_top = 14.0
offset_right = 920.0
offset_bottom = 54.0
color = Color(0.08, 0.1, 0.14, 0.7)

[node name="MessageLabel" type="Label" parent="HUD"]
offset_left = 380.0
offset_top = 22.0
offset_right = 380.0
offset_bottom = 22.0
text = ""
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)

[node name="HelpLabel" type="Label" parent="HUD"]
offset_left = 860.0
offset_top = 20.0
offset_right = 860.0
offset_bottom = 20.0
text = "ESC 设置 | 上下键/触摸拖动 | R 重开"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.75, 0.8, 0.85, 1)

[node name="SettingsOverlay" type="Control" parent="HUD"]
visible = false
process_mode = 3
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="SettingsDim" type="ColorRect" parent="HUD/SettingsOverlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.6)

[node name="SettingsPanel" type="ColorRect" parent="HUD/SettingsOverlay"]
offset_left = 360.0
offset_top = 170.0
offset_right = 920.0
offset_bottom = 520.0
color = Color(0.08, 0.1, 0.14, 0.95)

[node name="SettingsTitle" type="Label" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 18.0
offset_right = 24.0
offset_bottom = 18.0
text = "设置"
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)

[node name="VolumeLabel" type="Label" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 70.0
offset_right = 24.0
offset_bottom = 70.0
text = "音量"
theme_override_font_sizes/font_size = 16

[node name="VolumeSlider" type="HSlider" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 120.0
offset_top = 70.0
offset_right = 520.0
offset_bottom = 70.0
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="ScreenModeLabel" type="Label" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 125.0
offset_right = 24.0
offset_bottom = 125.0
text = "屏幕模式"
theme_override_font_sizes/font_size = 16

[node name="ScreenModeOption" type="OptionButton" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 120.0
offset_top = 122.0
offset_right = 340.0
offset_bottom = 122.0

[node name="ResolutionLabel" type="Label" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 180.0
offset_right = 24.0
offset_bottom = 180.0
text = "分辨率"
theme_override_font_sizes/font_size = 16

[node name="ResolutionOption" type="OptionButton" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 120.0
offset_top = 177.0
offset_right = 340.0
offset_bottom = 177.0

[node name="ModelLabel" type="Label" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 230.0
offset_right = 24.0
offset_bottom = 230.0
text = "人物模型"
theme_override_font_sizes/font_size = 16

[node name="ModelOption" type="OptionButton" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 120.0
offset_top = 227.0
offset_right = 340.0
offset_bottom = 227.0

[node name="ResumeButton" type="Button" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 24.0
offset_top = 300.0
offset_right = 220.0
offset_bottom = 300.0
text = "继续游戏"

[node name="QuitButton" type="Button" parent="HUD/SettingsOverlay/SettingsPanel"]
offset_left = 260.0
offset_top = 300.0
offset_right = 460.0
offset_bottom = 300.0
text = "退出游戏"

[node name="DeathOverlay" type="Control" parent="HUD"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="DeathDim" type="ColorRect" parent="HUD/DeathOverlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.65)

[node name="DeathPanel" type="ColorRect" parent="HUD/DeathOverlay"]
offset_left = 360.0
offset_top = 210.0
offset_right = 920.0
offset_bottom = 470.0
color = Color(0.08, 0.1, 0.14, 0.92)

[node name="DeathTitle" type="Label" parent="HUD/DeathOverlay/DeathPanel"]
offset_left = 24.0
offset_top = 22.0
offset_right = 24.0
offset_bottom = 22.0
text = "你已倒下"
theme_override_font_sizes/font_size = 30
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)

[node name="DeathStats" type="Label" parent="HUD/DeathOverlay/DeathPanel"]
offset_left = 24.0
offset_top = 70.0
offset_right = 24.0
offset_bottom = 70.0
text = ""
theme_override_font_sizes/font_size = 16

[node name="DeathHint" type="Label" parent="HUD/DeathOverlay/DeathPanel"]
offset_left = 24.0
offset_top = 180.0
offset_right = 24.0
offset_bottom = 180.0
text = "按 R 重开"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
